--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "alert-node": "^3.0.11",
     "body-parser": "^1.19.0",
     "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.0.2",
     "ejs-lint": "^1.1.0",
     "express": "^4.17.1",
@@ -21,6 +23,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
+    "mongoose-unique-validator": "^2.0.3",
     "node_module": "0.0.0",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
